AWS Bedrock Migration

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,16 @@
-# OpenRouter API Configuration
-OPENROUTER_API_KEY="your_openrouter_api_key_here"
+# AWS Bedrock Configuration
+# IMPORTANT: For EC2 deployment, use IAM role (recommended) - leave credentials empty
+# For local testing only, provide your AWS credentials:
+
+AWS_REGION="us-east-2"
+
+# Leave these EMPTY on EC2 if using IAM role (recommended):
+AWS_ACCESS_KEY_ID=""  
+AWS_SECRET_ACCESS_KEY=""
+
+# For local development/testing only:
+# AWS_ACCESS_KEY_ID="your_key_here"  
+# AWS_SECRET_ACCESS_KEY="your_secret_here"
 
 # Application Settings
 MAX_FILE_SIZE_MB=10
