--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,14 @@ fastapi>=0.104.0
 uvicorn>=0.24.0
 python-multipart>=0.0.6
 
-# OpenRouter and AI models
-openai>=1.0.0
+# AWS Bedrock and AI models
+boto3>=1.34.0
+botocore>=1.34.0
 
 # PDF processing
 pdfplumber>=0.10.0
 PyPDF2>=3.0.0
+reportlab>=4.0.0
 
 # Environment and config
 python-dotenv>=1.0.0
