--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ botocore>=1.34.0
 # PDF processing
 pdfplumber>=0.10.0
 PyPDF2>=3.0.0
+PyMuPDF>=1.23.0
 reportlab>=4.0.0
 
 # Environment and config
