fix: Update .gitignore to include new API and lease extraction documentation

--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,10 @@ QUICK_START_MAINTENANCE.md
 QUICKSTART.md
 README_DEPLOYMENT.md
 REDEPLOY_QUICK.md
+LEASE_EXTRACTION_INTEGRATION.md
+QUICK_START_LEASE_EXTRACTION.md
 
 # Lambda (removed)
 lambda/
+
+new api/*
