--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,12 @@ PyPDF2>=3.0.0
 PyMuPDF>=1.23.0
 reportlab>=4.0.0
 
+# OCR (Optional - for Tesseract fallback when AWS Textract unavailable)
+# Uncomment below if you want Tesseract OCR fallback:
+# pytesseract>=0.3.10
+# pdf2image>=1.17.0
+# Pillow>=10.0.0
+
 # Environment and config
 python-dotenv>=1.0.0
 pydantic>=2.0.0
