--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,14 @@
 .env
 .env.local
 .env.*.local
+.env.production
+.env.staging
+
+# SSH Keys and Credentials
+*.pem
+*.key
+*.ppk
+id_rsa*
 
 # Python virtual environment and cache
 __pycache__/
@@ -17,6 +25,7 @@ __pycache__/
 env/
 venv/
 ENV/
+.venv/
 
 # Python build artifacts (not needed for Docker)
 build/
@@ -34,6 +43,7 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
 
 # IDE and editor files
 .vscode/
@@ -41,6 +51,9 @@ wheels/
 *.swp
 *.swo
 *~
+.project
+.pydevproject
+.settings/
 
 # Test files and sample data
 test_*.py
@@ -48,13 +61,20 @@ test_*.py
 test_leases/
 *.pdf
 test_*.json
+sample_*.pdf
+lease_test_output.pdf
 
 # Logs
 *.log
 logs/
+*.log.*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Docker deployment package (temporary)
 deploy_package/
+docker-compose.override.yml
 
 # Testing and coverage
 .pytest_cache/
@@ -62,6 +82,9 @@ deploy_package/
 htmlcov/
 *.cover
 .tox/
+.nox/
+coverage.xml
+*.coveragerc
 
 # OS generated files
 .DS_Store
@@ -71,44 +94,58 @@ htmlcov/
 .Trashes
 ehthumbs.db
 Thumbs.db
+desktop.ini
 
 # Temporary files
 *.tmp
 *.temp
 *.bak
 *.swp
+*.swo
 response.json
+*.cache
 
 # Deployment backups on EC2
 *backup-*/
+backup_*/
 
-# Deployment scripts (local automation only)
-deploy.ps1
-deploy.sh
-ec2-setup.sh
-redeploy-updated.ps1
+# CI/CD artifacts (keep workflow definitions)
+.github/workflows/*.log
 
-# Documentation (keep only essential README and deployment guide)
-REDEPLOY_GUIDE.md
-
-# All other markdown files (we only need README and REDEPLOY_CORS_UPDATE)
-ARCHITECTURE.md
-DEPLOYMENT_CHECKLIST.md
-DEPLOYMENT_SUMMARY.md
-DEPLOYMENT_PACKAGE_README.md
-DOCS_INDEX.md
-FEATURE_SUMMARY.md
-GETTING_STARTED.md
-MAINTENANCE_WORKFLOW_API.md
-MANUAL_DEPLOYMENT.md
-QUICK_START_MAINTENANCE.md
-QUICKSTART.md
-README_DEPLOYMENT.md
-REDEPLOY_QUICK.md
-LEASE_EXTRACTION_INTEGRATION.md
-QUICK_START_LEASE_EXTRACTION.md
+# Documentation - Keep CI/CD and essential guides
+# (Removed excessive documentation files from .gitignore)
 
 # Lambda (removed)
 lambda/
 
-new api/*
+# Local development
+new api/
+.local/
+
+# Database files (if any)
+*.db
+*.sqlite
+*.sqlite3
+
+# Compiled Python
+*.pyc
+*.pyo
+*.pyd
+
+# Jupyter Notebook
+.ipynb_checkpoints
+*.ipynb
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
