--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,24 +25,20 @@ jobs:
         key: ${{ secrets.DEPLOY_SSH_KEY }}
         port: ${{ secrets.DEPLOY_PORT || 22 }}
         script: |
-          # Check if directory exists and is a git repo
-          if [ ! -d ~/melkai-aimodule/.git ]; then
-            echo "⚠️ Git repo not found, cloning fresh..."
-            rm -rf ~/melkai-aimodule
+          # Check if directory exists
+          if [ ! -d ~/melkai-aimodule ]; then
+            echo "📂 Cloning repository..."
             git clone https://github.com/zain-0/melkai-aimodule.git ~/melkai-aimodule
-            echo "✅ Repo cloned successfully"
           else
-            echo "📂 Git repo found, pulling latest changes..."
+            echo "📂 Updating repository..."
             cd ~/melkai-aimodule
             git fetch origin
             git reset --hard origin/main
             git pull origin main
           fi
           
-          # Verify we're in the right directory
           cd ~/melkai-aimodule
-          echo "📍 Current directory: $(pwd)"
-          echo "📄 Files: $(ls -la)"
+          echo "✅ Code updated to commit: $(git rev-parse --short HEAD)"
           
           # Deploy with docker
           sudo docker-compose down || true
